<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mistakeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@id/titleEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:layout_margin="2dp" />

    <EditText
        android:id="@+id/titleEt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mistakeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contentEt"
        android:textAlignment="center"
        android:hint="@string/naslov"/>

    <EditText
        android:id="@+id/contentEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/odustaniBtn"
        android:textAlignment="center"
        android:hint="@string/sadrzaj"/>

    <Button
        android:id="@+id/odustaniBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sacuvajBtn"
        app:layout_constraintTop_toBottomOf="@+id/contentEt"
        android:text="@string/odustani"/>

    <Button
        android:id="@+id/sacuvajBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/odustaniBtn"
        app:layout_constraintEnd_toStartOf="@+id/preskociBtn"
        app:layout_constraintTop_toBottomOf="@+id/contentEt"
        android:text="@string/sacuvaj"/>

    <Button
        android:id="@+id/preskociBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sacuvajBtn"
        app:layout_constraintTop_toBottomOf="@+id/contentEt"
        android:text="@string/preskoci"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>