<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapChange"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mistakeChangeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mapChange"
        app:layout_constraintBottom_toTopOf="@id/changeTitleEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/changeTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/mistakeChangeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15dp"/>

    <EditText
    android:id="@+id/changeContentEt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:layout_constraintTop_toBottomOf="@+id/changeTitleEt"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:inputType="textMultiLine"
    android:overScrollMode="always"
    android:textSize="15dp"/>

    <TextView
        android:id="@+id/changeDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/changeContentEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/ponisti_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changeDateTv"
        app:layout_constraintEnd_toStartOf="@id/sacuvaj_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/poni_ti"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/sacuvaj_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changeDateTv"
        app:layout_constraintStart_toEndOf="@id/ponisti_btn"
        app:layout_constraintEnd_toStartOf="@id/nazad_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sacuvaj"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/nazad_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changeDateTv"
        app:layout_constraintStart_toEndOf="@id/sacuvaj_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/exit"
        android:layout_marginTop="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>